minor change in help.html

--- a/help.html
+++ b/help.html
@@ -36,6 +36,7 @@
 				<li>Methodenaufrufe sind immer nur einer Zeile zugewiesen, auch wenn sich diese über mehrere Zeile erstrecken. Es ist immer die erste Zeile, in der der Code für einen solchen Aufruf beginnt. In folgendem Beispiel ist es auch die erste Zeile, obwohl der eigentliche Aufruf in der zweiten Zeile steht.<br><code>public static final Rational MAX_VALUE</code><code>		= new Rational(Integer.MAX_VALUE, 1);</code></li>
 				<li>Es werden auch implizite Methodenaufrufe angezeigt. Wie z.B. super()-Aufrufe oder Autoboxing. Diese sind für Anfänger schwer zu erkennen, da sie implizites Wissen voraussetzen.</li>
 				<li>Falls mehrere Methodenaufrufe innerhalb einer Zeile stehen, so werden diese chronologisch sowohl im Browse Modus angezeigt, als auch im Quiz Modus abgefragt.</li>
+				<li>Die Methodenaufrufe von inneren Klassen werden nicht dargestellt.</li>
 			</ul>
 		</div>
 	</div>
